[package]
name = "async-vecdeque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
